# RealityRealtyScraper

./: README.md  app.py  output_example.json  pyproject.toml  setup.cfg
scraper/: scraper.py
