[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "RealityRealtyScraper"
authors = [
    { name = "Christian Munoz", email = "clcardenas8@gmail.com" }
]
description = "Proyecto para la obtención de datos de anuncios de propiedades para el sitio web realityrealtypr.com."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright >= 1.49.1"
]
